Version 8.4
===========

Changes in detail
-----------------
Added ::Trace					global function
CDockContainer::GetToolBarData	member function
Added CFrame::GetMenuMetrics	member function
Added CFrame::GetToolBarData	member function
Added CTab::GetMaxTabSize		member function

Modified TRACE 					now implemented as a macro.



Version 8.3
===========

Bug Fixes:
 - Sometimes the view window of an undocked docker wasn't resized.
 - CFileDialog::GetPathName failed on Win98.
 - A dock ancestor didn't support docking unless it was also a top level window.
 - Dockers can now be used as a view window for a tab in CTab and CTabbedMDI.
 - An exception could be thrown when CTab was destroyed.
 - The highlighted menu radio box was out of position on Windows XP and older.
 - The Scribble sample destroyed a pen while it was selected in the device context.

New Features and Enhancements
-----------------------------
* Added PrintPreview sample
   This sample extends the NotePad sample by adding support for Print Preview.
   The techniques demonstrated here can be used in your own applications to 
   provide a print preview.
   
* Added CRibbonDockFrame.
   This class adds docking to a frame window which supports the Ribbon UI.
   A RibbonDockFrame sample has been added to demonstrate CRibbonDockFrame.

* Updated CString
 - CString and the text conversion classes can now be used independently of
   the rest of the framework.
 - Added CString::Assign. This function is used to assign a specified number 
   of characters to a CString. The assigned string can contain NULL characters.    

* Updated CFrame and CMDIFrame
 - SetView can now be used to switch between multiple views for frames
   and MDI children.
 - Added a virtual SetupMenuIcons function. This functions adds the set of
   ToolBar images to the icons used in menus. Override this to add additional
   icons to the menus.
 - Updated MRU support.
   The display of long file names in the MRU uses the same approach as Visual 